# todo_app_phaseIII

./: .gitignore  COMPREHENSIVE_REVIEW_REPORT.md  backend_openapi.json  backend_openapi_final.json  debug_agent.py  debug_full_flow.py  final_verification.py  init_db.py  run_frontend.bat  simple_verification.py  start-frontend.sh  test_auth.py  test_conversation_history.py  workflow_test.py
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  app.py  config.py  debug_server.py  deploy.sh  main.py  middleware.py  pyproject.toml  requirements.txt  requirements_backup.txt  requirements_fixed.txt  simple_test.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  chat.py  health.py
backend/src/api/v1/: __init__.py
backend/src/mcp/: __init__.py  server.py  tools.py
backend/src/models/: conversation.py  message.py
backend/src/services/: agent.py  agent_gemini.py  conversation.py  database.py  rate_limiter.py  token_blacklist.py
frontend/: CLAUDE.md  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/chat/: page.tsx
frontend/src/components/: AuthForm.tsx  Chat.tsx  MessageInput.tsx  MessageList.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts
frontend/src/styles/: globals.css
history/prompts/1-todo-ai-chatbot/: 001-create-todo-ai-chatbot-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  (+2 more)
migrations/: 001_initial_schema.sql  README.md
specs/1-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+7 files in other folders)
